2008-03-04  Adele Peterson  <adele@apple.com>

        Reviewed by Beth.

        Test for <rdar://problem/5779718> focus() does not work for anchor elements with no content

        * fast/events/anchor-empty-focus-expected.txt: Added.
        * fast/events/anchor-empty-focus.html: Added.

2008-03-04  Dan Bernstein  <mitz@apple.com>

        - test for <rdar://problem/5622336> Burmese text does not render on http://www.myanmarbible.com/bible/Judson/html/index.html

        * platform/win/fast/text/uniscribe-missing-glyph-expected.txt: Added.
        * platform/win/fast/text/uniscribe-missing-glyph.html: Added.

2008-03-04  Alexey Proskuryakov  <ap@webkit.org>

        Suggested by Darin, rubber-stamped by Mark.

        http://bugs.webkit.org/show_bug.cgi?id=17569
        REGRESSION (r30571): Buzzword.com doesn't load

        Rolling out r30571, as determining what is wrong with it proved tricky.

        * fast/loader/meta-refresh-anchor-click-expected.txt: Removed.
        * fast/loader/meta-refresh-anchor-click.html: Removed.
        * fast/loader/resources/meta-refresh-subframe.html: Removed.

2008-03-03  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Update test results.

        * fast/dom/Window/window-properties-expected.txt:

2008-03-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test that :first-letter applies to the first letter in normal flow,
          skipping floats and positioned objects

        * fast/css/first-letter-skip-out-of-flow.html: Added.
        * platform/mac-leopard/fast/css/first-letter-skip-out-of-flow-expected.checksum: Added.
        * platform/mac-leopard/fast/css/first-letter-skip-out-of-flow-expected.png: Added.
        * platform/mac/fast/css/first-letter-skip-out-of-flow-expected.txt: Added.

2008-03-03  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        Test for http://bugs.webkit.org/show_bug.cgi?id=17313