@@ -1,9 +1,16 @@
 <script>
     if (window.layoutTestController)
         layoutTestController.dumpAsText();
+    function didLoad()
+    {
+        document.getElementById("loadStatus").innerText = "PASS: Load event fired.";
+    }
+    window.addEventListener("load", didLoad);
 </script>
 
 <link href="/adeleandbethrock.css" rel="stylesheet" type="text/css">
 
-This test passes if it does not ASSERT that the document's pending style sheet count is less than 0.  
- 
+This test passes if it does not ASSERT that the document's pending style sheet count is less than 0, and the load event fires.
+<p id="loadStatus">
+FAIL: Load event did not fire.
+</p>
